--- a/src/lib/Layouts/MainLayout.astro
+++ b/src/lib/Layouts/MainLayout.astro
@@ -5,10 +5,15 @@ import "../../app.css";
 
 <html lang="en" class="scroll-smooth">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dark</title>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Khai Haidari</title>
+    <meta
+      name="description"
+      content="Currently studying in high-school, I'm a digital technology enthusiast and a small content creator based in Melbourne, Australia."
+    />
   </head>
   <body class="bg-[#16161A] text-slate-400">
     <Navbar />
