--- a/src/lib/Components/Article.astro
+++ b/src/lib/Components/Article.astro
@@ -2,19 +2,19 @@
 const { title, desc, link, cover } = Astro.props;
 ---
 
-<a href={link} class="w-full md:w-1/2 bg-neutral-800 rounded-lg">
+<a
+  href={link}
+  class="border-2 border-neutral-800 rounded-lg hover:bg-neutral-800"
+>
   <img
     class="w-full aspect-video object-cover rounded-tr rounded-tl"
     src={cover}
     alt="img failed to load"
   />
-  <div class="w-full flex flex-col gap-2 p-6">
+  <div class="w-full flex flex-col gap-2 px-6 py-4">
     <p class="font-bold text-slate-50">{title}</p>
     <p class="text-[14px] text-custom-1">
       {desc}
-    </p>
-    <p class="text-green-600 hover:text-green-500 flex items-center gap-2">
-      Read more
     </p>
   </div>
 </a>
